# pgnp

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
src/: HalfMove.cpp  HalfMove.hpp  LargeFileStream.cpp  LargeFileStream.hpp  PGN.cpp  PGN.hpp  Types.hpp  pgnp.cpp  pgnp.hpp
tests/: CMakeLists.txt  combined.cpp  from_string.cpp  str.cpp  tests.cpp  valid.cpp
tests/pgn_files/combined/: hartwig.pgn
tests/pgn_files/valid/: pgn1.pgn  pgn2.pgn  pgn3.pgn
